--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-
     package="com.amgems.consort.consort" >
 
-    <uses-permission android:name="android.permission.INTERNET" />
     <uses-sdk tools:overrideLibrary="android.support.v7.appcompat, android.support.v4" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -13,21 +13,24 @@
         android:label="@string/app_name"
         android:theme="@style/Theme.Main" >
         <activity
-            android:name=".MainMenuActivity"
+            android:name="com.amgems.consort.consort.MainMenuActivity"
             android:label="@string/app_name" >
         </activity>
-
         <activity
-            android:name=".LoginActivity"
+            android:name="com.amgems.consort.consort.LoginActivity"
             android:label="@string/title_activity_login"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
-
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
+        <activity
+            android:name="com.amgems.consort.consort.GameSessionActivity"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            android:label="@string/title_activity_game_session" >
+        </activity>
     </application>
 
 </manifest>
