--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,15 @@ android {
 
     defaultConfig {
         applicationId "com.amgems.consort.consort"
-        minSdkVersion 19
-        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
+
+        minSdkVersion 19
+        targetSdkVersion 21
+
+        buildConfigField "String", "SERVER_URL", "\"http://192.168.8.145:33333\""
     }
+
     buildTypes {
         release {
             runProguard false
